@@ -1,6 +1,9 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.233 2008-03-27 09:35:30 guru Exp $
+	$Id: ChangeLog,v 1.234 2008-03-29 20:49:25 guru Exp $
 -----------------------------------------------------------------------------------------
+2008-03-29	pwessel
+	* pslib.[ch]:	Like in gmt, use PS_exit instead of exit to avoid Matlab shutdown.
+	
 2008-03-26	pwessel
 	* gmt_grdio.c:	Now the grd i/o support the GMT_[DATA|IMG|GRID\DIR] environment settings.
 	* grdinfo.c:	Reports actual path to the file (may change if GMT_GRIDDIR is involved).
